Ingress/ase-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ase-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    kubernetes.io/ingress.class: nginx-public
spec:
  tls:
  - hosts:
    - ase-${PING_IDENTITY_K8S_NAMESPACE}.ping-devops.com
    secretName: tls-secret
  rules:
  - host: ase-${PING_IDENTITY_K8S_NAMESPACE}.ping-devops.com
    http:
      paths:
      # This rule gives external access for PA to communicate with ASE
      - path: /
        backend:
          serviceName: ase-external-service
          servicePort: 8443
