Ingress/dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    kubernetes.io/ingress.class: nginx-public
spec:
  tls:
  - hosts:
    - dashboard-${PING_IDENTITY_K8S_NAMESPACE}.ping-devops.com
    secretName: tls-secret
  rules:
  - host: dashboard-${PING_IDENTITY_K8S_NAMESPACE}.ping-devops.com
    http:
      paths:
      # This rule gives external access to the Dashboard UI
      - path: /
        backend:
          serviceName: dashboard-external-service
          servicePort: 8030
