Ingress/pingfederate-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pingfederate-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    kubernetes.io/ingress.class: nginx-public
spec:
  tls:
  - hosts:
    - pingfederate-${PING_IDENTITY_K8S_NAMESPACE}.ping-devops.com
    secretName: tls-secret
  rules:
  - host: pingfederate-${PING_IDENTITY_K8S_NAMESPACE}.ping-devops.com
    http:
      paths:
      - path: /
        backend:
          serviceName: pingfederate
          servicePort: 9031
      - path: /pingfederate
        backend:
          serviceName: pingfederate
          servicePort: 9999
      - path: /pf-admin-api
        backend:
          serviceName: pingfederate
          servicePort: 9999
